src/test/deca/context/valid/test_init_compatible_float_int.deca
// Description:
//    Initialization
//
// Resultats:
//   Initialization d'une variable de type float avec convfloat de l expression a droite
//
// Historique:
//    cree le 01/01/2024

{
   float x = 42 ;
}
