src/test/deca/context/invalid/obj/declfield/test_field_void.deca
// Description:
//    declaration d'un field de type void
//
// Resultats:
//   Vous ne pouvez pas déclarer un field de type void
// 
// Historique:
//    cree le 01/01/2024

class A{
    void a;
}
